# servidiot

./: .gitignore  Cargo.toml  README.md
servidiot-anvil/: Cargo.toml
servidiot-anvil/src/: lib.rs
servidiot-anvil/src/nbt/: entity.rs  level.rs  mod.rs  player.rs
servidiot-anvil/src/region/: file.rs  mod.rs  nbt.rs
servidiot-bin/: Cargo.toml
servidiot-bin/src/: main.rs
servidiot-core/: Cargo.toml
servidiot-core/src/: game.rs  lib.rs
servidiot-core/src/ecs/: event.rs  mod.rs  resources.rs  system.rs
servidiot-core/src/ecs/entities/: player.rs
servidiot-core/src/ecs/events/: mod.rs
servidiot-core/src/ecs/systems/: mod.rs  network.rs
servidiot-core/src/entity/: mod.rs  player.rs
servidiot-core/src/events/entity/: mod.rs
servidiot-core/src/systems/: login.rs  mod.rs  packet.rs  world.rs
servidiot-core/src/systems/entity/: mod.rs
servidiot-core/src/systems/entity/player/: mod.rs
servidiot-core/src/world/: loader.rs  mod.rs  region.rs  view.rs
servidiot-core/src/world/chunk/: handle.rs  mod.rs  store.rs
servidiot-ecs/: Cargo.toml
servidiot-ecs/src/: entity.rs  lib.rs  world.rs
servidiot-ecs/src/entity/: mod.rs  reservation.rs
servidiot-ecs/src/events/: handler.rs  mod.rs
servidiot-ecs/src/system/: mod.rs
servidiot-network/: Cargo.toml
servidiot-network/src/: lib.rs
servidiot-network/src/connection/: listener.rs  mod.rs  worker.rs
servidiot-network/src/connection/worker/: handshake.rs
servidiot-network/src/io/: codec.rs  mod.rs  primitives.rs
servidiot-network/src/io/packet/: mod.rs
servidiot-network/src/io/packet/client/: handshake.rs  login.rs  mod.rs  play.rs
servidiot-network/src/io/packet/server/: login.rs  play.rs
servidiot-network/src/server/: id.rs  mod.rs
servidiot-primitives/: Cargo.toml
servidiot-primitives/src/: block.rs  item.rs  lib.rs  metadata.rs  nibble_vec.rs  number.rs  player.rs  position.rs
servidiot-primitives/src/chunk/: handle.rs  mod.rs  section.rs  store.rs
servidiot-primitives/src/position/: iteration.rs
servidiot-testaround/: Cargo.toml
servidiot-testaround/src/: main.rs
servidiot-utils/: Cargo.toml
servidiot-utils/src/: events.rs  lib.rs  resources.rs  ticks.rs  typemap.rs
servidiot-world/: Cargo.toml
servidiot-world/src/: lib.rs  view.rs
servidiot-world/src/world/: mod.rs  thread.rs  world.rs
servidiot-yggdrasil/: Cargo.toml
servidiot-yggdrasil/src/: authenticate.rs  lib.rs
