[package]
name = "servidiot-anvil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
bitvec = "1.0"
servidiot-primitives = { path = "../servidiot-primitives" }
hematite-nbt = "0.5.2"
serde = { version = "1", features = ["derive"] }
ahash = "0.8.11"
bytemuck = "1"
uuid = "1"

