[package]
name = "servidiot-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
servidiot-core = { path = "../servidiot-core" }
log = "0.4"
env_logger = "0.10"