[package]
name = "servidiot-ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecs = "0.10.4"
servidiot-utils = { path = "../servidiot-utils" }
tokio = { version = "1", features = ["rt"] }
anyhow = "1"
tracing = "0.1"

