[package]
name = "servidiot-primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
hematite-nbt = "0.5.2"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
parking_lot = "0.12.1"
ahash = "0.8"
fixed = { version = "1.24", features = ["serde-str", "serde"] }