[package]
name = "servidiot-yggdrasil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.8.1"
sha1 = "0.10.5"
num-bigint = "0.4.3"
num = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }